fix z-index for before pseudoelement

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -678,7 +678,7 @@ header.b_header{position:initial; left:0px; top:0px; height:70px; height:5rem; z
 
 .blog_posts{width:100%; max-width:100%; margin-left:0px; margin-right:0px;}
 .blog_posts .nav-category{transition:0.2s linear; width: 90%; margin-left: 5%; margin-right: 5%; position: absolute; top: 19rem; left: 0px; height: 4rem; z-index: 5; border-radius:0.5rem;}
-.blog_posts .nav-category::before{display:block; content:''; position:absolute; width:90%; margin-left:5%; margin-right:5%; left:0px; height:4rem; z-index:3;}
+.blog_posts .nav-category::before{display:block; content:''; position:absolute; width:90%; margin-left:5%; margin-right:5%; left:0px; height:4rem; z-index:6;}
 .blog_posts .nav-category li{display:none; position:relative; font-size:1rem; color: #377eea; z-index:1; padding-top:0.75rem; padding-bottom:0.75rem; font-weight: 800; letter-spacing: 2px;}
 .blog_posts .nav-category li:first-of-type{display:block; padding-top:1.5rem;}
 .blog_posts .nav-category li:last-of-type{padding-bottom:1.5rem;}
@@ -686,7 +686,7 @@ header.b_header{position:initial; left:0px; top:0px; height:70px; height:5rem; z
 .blog_posts .nav-category li a {margin-left:0px; margin-right:0px; width:100%;}
 .blog_posts .nav-category:hover{height:auto;}
 .blog_posts .nav-category:hover li{display:block;}
-.blog_posts .nav-category:hover::before{display:none; transition:0.5s linear;}
+.blog_posts .nav-category:hover::before{display:none; transition:1s linear;}
 .blog_posts .post_mini-blocks{padding:0px; margin:0px; width:90%; max-width:90%; margin-left:5%; margin-right:5%; padding-bottom:3rem;}
 .blog_posts .post{display:block; width:100%; margin-bottom: 2rem; border-radius: 1.5rem;}
 .blog_posts .post:nth-child(3n+4), .blog_posts .post:nth-child(1), .blog_posts .post:nth-child(3n+3){margin:0px; margin-bottom: 2rem; }
